Call Initialize in third constructor
A call to Initialize is missing in the third constructor

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
@@ -181,6 +181,7 @@ namespace @Settings.Namespace
         {
         @:    this.@(param.Name) = @(param.Name.ToCamelCase());
         }
+        @:    this.Initialize();
         @:}
         @:@EmptyLine
         }
