--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodGroupTemplate.cshtml
@@ -21,6 +21,9 @@ namespace @Settings.Namespace
 @:    using @usingString;
 }
 @EmptyLine
+    /// <summary>
+    /// @(Model.MethodGroupType) operations.
+    /// </summary>
     internal partial class @(Model.MethodGroupType) : IServiceOperations<@(Model.Name)>, I@(Model.MethodGroupType)
     {
         /// <summary>
