--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -14,7 +14,7 @@ namespace @Settings.Namespace
 }
 @EmptyLine
     /// <summary>
-    @WrapComment("/// ", Model.Documentation.EscapeXmlComment())
+    /// @(Model.MethodGroupType) operations.
     /// </summary>
     public partial interface I@(Model.MethodGroupType)
     {
