--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
@@ -20,6 +20,9 @@ namespace @Settings.Namespace
 @:    using @usingString;
 }
 @EmptyLine
+    /// <summary>
+    /// @(Model.MethodGroupType) operations.
+    /// </summary>
     internal partial class @(Model.MethodGroupType) : IServiceOperations<@(Model.Name)>, I@(Model.MethodGroupType)
     {
         /// <summary>
