--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -70,7 +70,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   @EmptyLine
   # Send Request
   promise = Concurrent::Promise.new do
-    connection.put do |request|
+    connection.@(Model.HttpMethod.ToString().ToLower()) do |request|
       request.headers = request_headers
 @if (Model.RequestBody != null)
 {
