--- a/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
@@ -2,13 +2,15 @@
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
-  #
-  @WrapComment("# ", "Defines values for " + Model.TypeDefinitionName)
-  #
-  module @(Model.TypeDefinitionName)
-    @for (int i = 0; i < Model.Values.Count; i++)
-    {
-    @:@(Model.Values[i].Name) = "@(Model.Values[i].SerializedName)"
-    }
+  module Models
+    #
+    @WrapComment("# ", "Defines values for " + Model.TypeDefinitionName)
+    #
+    module @(Model.TypeDefinitionName)
+      @for (int i = 0; i < Model.Values.Count; i++)
+      {
+      @:@(Model.Values[i].Name) = "@(Model.Values[i].SerializedName)"
+      }
+    end
   end
 end
