issue #209 converted operations to public for non-Azure C# generator

--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodGroupTemplate.cshtml
@@ -34,6 +34,10 @@ namespace @Settings.Namespace
         /// </param>
         internal @(Model.MethodGroupType)(@(Model.Name) client)
         {
+            if (client == null) 
+            {
+                throw new ArgumentNullException("client");
+            }
             this.Client = client;
         }
         @EmptyLine
