--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
@@ -23,7 +23,7 @@ namespace @Settings.Namespace
     /// <summary>
     /// @(Model.MethodGroupType) operations.
     /// </summary>
-    internal partial class @(Model.MethodGroupType) : IServiceOperations<@(Model.Name)>, I@(Model.MethodGroupType)
+    public partial class @(Model.MethodGroupType) : IServiceOperations<@(Model.Name)>, I@(Model.MethodGroupType)
     {
         /// <summary>
         /// Initializes a new instance of the @(Model.MethodGroupType) class.
@@ -31,8 +31,12 @@ namespace @Settings.Namespace
         /// <param name='client'>
         /// Reference to the service client.
         /// </param>
-        internal @(Model.MethodGroupType)(@(Model.Name) client)
+        public @(Model.MethodGroupType)(@(Model.Name) client)
         {
+            if (client == null) 
+            {
+                throw new ArgumentNullException("client");
+            }
             this.Client = client;
         }
         @EmptyLine
