--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
@@ -8,6 +8,15 @@ module @Settings.Namespace
   @WrapComment("# ", string.IsNullOrEmpty(Model.Documentation) ? Model.MethodGroupName : Model.Documentation)
   #
   class @(Model.MethodGroupName)
+@if (Model.HasModelTypes)
+{
+    @:include @(Settings.Namespace)::Models
+}
+@foreach (var include in Model.Includes)
+{
+    @:include @include
+}
+    @EmptyLine
 
     #
     # Creates and initializes a new instance of the @Model.MethodGroupName class.
