--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
@@ -17,7 +17,7 @@ exports.Resource = msRestAzure.Resource;
 exports.CloudError = msRestAzure.CloudError;
 @foreach (var model in Model.ModelTemplateModels)
 {
-@:exports.@model.Name = require('./@model.Name');
+@:exports.@model.Name = require('./@model.Name.ToCamelCase()');
 }
 @if (!string.IsNullOrWhiteSpace(Model.PolymorphicDictionary))
 {
