--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplate.cshtml
@@ -13,5 +13,5 @@
 @EmptyLine
 @foreach (var methodGroup in Model.MethodGroupModels)
 {
-@:exports.@(methodGroup.MethodGroupType) = require('./@(methodGroup.MethodGroupType)');
+@:exports.@(methodGroup.MethodGroupType) = require('./@(methodGroup.MethodGroupType.ToCamelCase())');
 }
