--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelIndexTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelIndexTemplate.cshtml
@@ -13,7 +13,7 @@
 @EmptyLine
 @foreach (var model in Model.ModelTemplateModels)
 {
-@:exports.@model.Name = require('./@model.Name');
+@:exports.@model.Name = require('./@model.Name.ToCamelCase()');
 }
 @if (!string.IsNullOrWhiteSpace(Model.PolymorphicDictionary))
 {
