--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -29,7 +29,6 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   @(Model.RemoveDuplicateForwardSlashes("url"))
 
   @EmptyLine
-  @* TODO: add proper references to @client *@
   connection = Faraday.new(:url => url) do |faraday|
   @foreach (var middelware in Model.FaradeyMiddlewares)
   {
@@ -65,7 +64,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   @EmptyLine
   @:# Serialize Request
   @:request_headers['Content-Type'] = 'application/json'
-  @:@Model.CreateSerializationString(Model.RequestBody.Name, Model.RequestBody.Type, "request_content", Settings.Namespace + "::Models")
+  @:@Model.CreateSerializationString(Model.RequestBody.Name, Model.RequestBody.Type, "request_content")
   }
 
   @EmptyLine
@@ -109,7 +108,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
     # Deserialize Response
     if status_code == @Model.GetStatusCodeReference(responsePair.Key)
       begin
-        @(Model.CreateDeserializationString("response_content", Model.ReturnType, "result.body", Settings.Namespace + "::Models"))
+        @(Model.CreateDeserializationString("response_content", responsePair.Value, "result.body"))
       rescue Exception => e
         fail MsRest::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
       end
@@ -121,7 +120,7 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
     {
     <text>
     begin
-      @(Model.CreateDeserializationString("response_content", Model.ReturnType, "result.body", Settings.Namespace + "::Models"))
+      @(Model.CreateDeserializationString("response_content", Model.ReturnType, "result.body"))
     rescue Exception => e
       fail MsRest::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
     end
