--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -34,7 +34,7 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
         if(parameter.Location != ParameterLocation.Query &&
             (Model.HttpMethod != HttpMethod.Patch || parameter.Location != ParameterLocation.Body))
         {
-    @:@(parameter.Type.ValidateType(Model.Scope, parameter.Name))
+    @:@(parameter.Type.ValidateType(Model.Scope, parameter.Name, parameter.Constraints))
         }
     }
     // Tracing
